--- a/docroot/modules/custom/ymca_camp_du_nord/modules/ymca_cdn_sync/ymca_cdn_sync.services.yml
+++ b/docroot/modules/custom/ymca_camp_du_nord/modules/ymca_cdn_sync/ymca_cdn_sync.services.yml
@@ -30,3 +30,10 @@ services:
       - [addStep, ['@ymca_cdn_sync.cleaner', 'clean']]
     tags:
       - { name: syncer }
+  ymca_cdn_sync.add_to_cart:
+    class: Drupal\ymca_cdn_sync\syncer\AddToCart
+    arguments:
+      - '@http_client'
+      - '@logger.channel.ymca_cdn_sync'
+      - '@config.factory'
+      - '@ymca_cdn_sync.wrapper'
