[YTCDN-25] add theming for CDN checkout workflow

--- a/docroot/modules/custom/ymca_prgf_camp_du_nord/config/install/views.view.cdn_calendar.yml
+++ b/docroot/modules/custom/ymca_prgf_camp_du_nord/config/install/views.view.cdn_calendar.yml
@@ -3,6 +3,7 @@ status: true
 dependencies:
   config:
     - field.storage.cdn_prs_product.field_cdn_prd_code
+    - field.storage.cdn_prs_product.field_cdn_prd_list_price
     - field.storage.cdn_prs_product.field_cdn_prd_start_date
   module:
     - datetime
@@ -27,7 +28,7 @@ display:
         type: none
         options: {  }
       cache:
-        type: tag
+        type: none
         options: {  }
       query:
         type: views_query
@@ -81,8 +82,8 @@ display:
           contentHeight: 0
           editable: false
           fields:
-            title: false
-            title_field: name
+            title: true
+            title_field: field_cdn_prd_list_price
             url: false
             url_field: name
             date: false
@@ -286,6 +287,69 @@ display:
           separator: ', '
           field_api_classes: false
           plugin_id: field
+        field_cdn_prd_list_price:
+          id: field_cdn_prd_list_price
+          table: cdn_prs_product__field_cdn_prd_list_price
+          field: field_cdn_prd_list_price
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: true
+            text: '${{ field_cdn_prd_list_price__value }}'
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: string
+          settings:
+            link_to_entity: false
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
       filters: {  }
       sorts: {  }
       header: {  }
@@ -344,6 +408,7 @@ display:
         - url
       tags:
         - 'config:field.storage.cdn_prs_product.field_cdn_prd_code'
+        - 'config:field.storage.cdn_prs_product.field_cdn_prd_list_price'
         - 'config:field.storage.cdn_prs_product.field_cdn_prd_start_date'
   embed_1:
     display_plugin: embed
@@ -363,4 +428,5 @@ display:
         - url
       tags:
         - 'config:field.storage.cdn_prs_product.field_cdn_prd_code'
+        - 'config:field.storage.cdn_prs_product.field_cdn_prd_list_price'
         - 'config:field.storage.cdn_prs_product.field_cdn_prd_start_date'
