--- a/composer.json
+++ b/composer.json
@@ -204,14 +204,14 @@
         "drupal/datalayer": "1.x-dev",
         "drupal/optimizely": "1.2",
         "drupal/google_tag": "1.x-dev",
-        "drupal/google_analytics": "^2.1",
-        "drupal/simple_sitemap": "^2.8",
-        "drupal/redirect": "^1.0@alpha",
-        "drupal/metatag": "^1.0",
-        "drupal/scheduler": "^1.0@RC",
-        "drupal/webform": "^5.0@beta",
-        "drupal/captcha": "^1.0@beta",
-        "drupal/recaptcha": "^2.2",
+        "drupal/google_analytics": "2.2",
+        "drupal/simple_sitemap": "2.9",
+        "drupal/redirect": "1.0-beta1",
+        "drupal/metatag": "1.3",
+        "drupal/scheduler": "1.0",
+        "drupal/webform": "5.0-beta24",
+        "drupal/captcha": "1.0-beta1",
+        "drupal/recaptcha": "2.2",
         "drupal/rabbit_hole": "1.0-beta3",
         "drupal/admin_toolbar": "1.20",
         "drupal/panelbutton": "1.1",
