[OYPD-613] Behat test refactoring; Add permissions to use this code block for Editor.

--- a/modules/openy_features/openy_user/config/install/user.role.editor.yml
+++ b/modules/openy_features/openy_user/config/install/user.role.editor.yml
@@ -20,6 +20,7 @@ permissions:
   - 'access tour'
   - 'access videos_library entity browser pages'
   - 'access videos_library_embed entity browser pages'
+  - 'administer blocks'
   - 'administer menu'
   - 'administer nodes'
   - 'administer taxonomy'
@@ -120,6 +121,7 @@ permissions:
   - 'use published_archived transition'
   - 'use published_draft transition'
   - 'use published_published transition'
+  - 'use text format code'
   - 'use text format full_html'
   - 'use text format full_html'
   - 'view alert revisions'
