--- a/modules/openy_features/openy_block/modules/openy_block_date/openy_block_date.info.yml
+++ b/modules/openy_features/openy_block/modules/openy_block_date/openy_block_date.info.yml
@@ -1,10 +1,9 @@
 name: 'OpenY Date Block'
-description: 'OpenY Date Block'
+description: 'Implements OpenY Date Block.'
 type: module
 core: 8.x
 dependencies:
   - block_content
-  - datalayer
   - datetime
   - entity_reference_revisions
   - field
