[OYPD-613]: Fix the default text format issue.

--- a/modules/openy_features/openy_block/modules/openy_code_block/config/install/field.field.block_content.code_block.field_code.yml
+++ b/modules/openy_features/openy_block/modules/openy_code_block/config/install/field.field.block_content.code_block.field_code.yml
@@ -19,7 +19,10 @@ label: Code
 description: ''
 required: true
 translatable: false
-default_value: {  }
+default_value:
+  -
+    value: ' '
+    format: code
 default_value_callback: ''
 settings: {  }
 field_type: text_long
