--- a/modules/openy_features/openy_prgf/modules/openy_prgf_news_listing/config/install/views.view.listing_news_posts.yml
+++ b/modules/openy_features/openy_prgf/modules/openy_prgf_news_listing/config/install/views.view.listing_news_posts.yml
@@ -505,13 +505,16 @@ display:
         - 'config:core.entity_view_display.node.alert.node_alert_footer'
         - 'config:core.entity_view_display.node.alert.node_alert_header'
         - 'config:core.entity_view_display.node.alert.teaser'
-        - 'config:core.entity_view_display.node.news.default'
-        - 'config:core.entity_view_display.node.news.full'
-        - 'config:core.entity_view_display.node.news.teaser'
+        - 'config:core.entity_view_display.node.blog.default'
+        - 'config:core.entity_view_display.node.blog.full'
+        - 'config:core.entity_view_display.node.blog.teaser'
         - 'config:core.entity_view_display.node.branch.calc_summary'
+        - 'config:core.entity_view_display.node.branch.class_location'
         - 'config:core.entity_view_display.node.branch.default'
         - 'config:core.entity_view_display.node.branch.full'
+        - 'config:core.entity_view_display.node.branch.sidebar_teaser'
         - 'config:core.entity_view_display.node.branch.teaser'
+        - 'config:core.entity_view_display.node.camp.class_location'
         - 'config:core.entity_view_display.node.camp.default'
         - 'config:core.entity_view_display.node.camp.full'
         - 'config:core.entity_view_display.node.camp.teaser'
@@ -527,6 +530,9 @@ display:
         - 'config:core.entity_view_display.node.membership.calc_summary'
         - 'config:core.entity_view_display.node.membership.default'
         - 'config:core.entity_view_display.node.membership.teaser'
+        - 'config:core.entity_view_display.node.news.default'
+        - 'config:core.entity_view_display.node.news.full'
+        - 'config:core.entity_view_display.node.news.teaser'
         - 'config:core.entity_view_display.node.program.default'
         - 'config:core.entity_view_display.node.program.full'
         - 'config:core.entity_view_display.node.program.teaser'
@@ -562,13 +568,16 @@ display:
         - 'config:core.entity_view_display.node.alert.node_alert_footer'
         - 'config:core.entity_view_display.node.alert.node_alert_header'
         - 'config:core.entity_view_display.node.alert.teaser'
-        - 'config:core.entity_view_display.node.news.default'
-        - 'config:core.entity_view_display.node.news.full'
-        - 'config:core.entity_view_display.node.news.teaser'
+        - 'config:core.entity_view_display.node.blog.default'
+        - 'config:core.entity_view_display.node.blog.full'
+        - 'config:core.entity_view_display.node.blog.teaser'
         - 'config:core.entity_view_display.node.branch.calc_summary'
+        - 'config:core.entity_view_display.node.branch.class_location'
         - 'config:core.entity_view_display.node.branch.default'
         - 'config:core.entity_view_display.node.branch.full'
+        - 'config:core.entity_view_display.node.branch.sidebar_teaser'
         - 'config:core.entity_view_display.node.branch.teaser'
+        - 'config:core.entity_view_display.node.camp.class_location'
         - 'config:core.entity_view_display.node.camp.default'
         - 'config:core.entity_view_display.node.camp.full'
         - 'config:core.entity_view_display.node.camp.teaser'
@@ -584,6 +593,9 @@ display:
         - 'config:core.entity_view_display.node.membership.calc_summary'
         - 'config:core.entity_view_display.node.membership.default'
         - 'config:core.entity_view_display.node.membership.teaser'
+        - 'config:core.entity_view_display.node.news.default'
+        - 'config:core.entity_view_display.node.news.full'
+        - 'config:core.entity_view_display.node.news.teaser'
         - 'config:core.entity_view_display.node.program.default'
         - 'config:core.entity_view_display.node.program.full'
         - 'config:core.entity_view_display.node.program.teaser'
