--- a/openy.info.yml
+++ b/openy.info.yml
@@ -138,6 +138,7 @@ dependencies:
   - openy_prgf_blog_camp
   - openy_prgf_blog_branch
   - openy_prgf_blog_listing
+  - openy_prgf_block_date
   - openy_prgf_loc_finder
   - openy_prgf_mbrshp_calc
   - openy_prgf_microsites_menu
