[OYPD-624] Fix the issue.

--- a/modules/openy_features/openy_media/modules/openy_media_image/config/install/views.view.images_library.yml
+++ b/modules/openy_features/openy_media/modules/openy_media_image/config/install/views.view.images_library.yml
@@ -461,6 +461,7 @@ display:
         groups:
           1: AND
       css_class: eb-media
+      use_ajax: true
     cache_metadata:
       max-age: -1
       contexts:
