--- a/openy.info.yml
+++ b/openy.info.yml
@@ -106,6 +106,7 @@ dependencies:
   - openy_block_menu
   - openy_code_block
   - openy_datalayer
+  - openy_font
   - openy_taxonomy
   - openy_txnm_amenities
   - openy_txnm_color
