--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "behat/mink-goutte-driver": "~1.2",
         "emuse/behat-html-formatter": "^0.1.0",
         "drupal/tqextension": "dev-drupal-8",
-        "integratedexperts/behat-screenshot": "^0.6.2"
+        "integratedexperts/behat-screenshot": "^0.6.2",
+        "consolidation/robo": "^1.1.5"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
