--- a/composer.json
+++ b/composer.json
@@ -221,6 +221,8 @@
         "drupal/token_filter": "1.0-beta1",
         "drupal/views_field_formatter": "1.5",
         "drupal/lndr": "1.11",
-        "doctrine/inflector": "1.1.*"
+        "doctrine/inflector": "1.1.*",
+        "drupal/crop": "1.3",
+        "drupal/focal_point": "1.0-beta5"
     }
 }
