--- a/modules/openy_features/openy_media/modules/openy_media_image/config/install/core.entity_form_display.media.image.default.yml
+++ b/modules/openy_features/openy_media/modules/openy_media_image/config/install/core.entity_form_display.media.image.default.yml
@@ -6,10 +6,10 @@ dependencies:
     - field.field.media.image.field_media_image
     - field.field.media.image.field_media_in_library
     - field.field.media.image.field_media_tags
-    - image.style.thumbnail
+    - image.style.thumbnail_focal_point
     - media_entity.bundle.image
   module:
-    - image
+    - focal_point
 id: media.image.default
 targetEntityType: media
 bundle: image
@@ -26,10 +26,12 @@ content:
   field_media_image:
     weight: 2
     settings:
+      preview_image_style: thumbnail_focal_point
       progress_indicator: throbber
-      preview_image_style: thumbnail
+      preview_link: true
+      offsets: '50,50'
     third_party_settings: {  }
-    type: image_image
+    type: image_focal_point
     region: content
   field_media_in_library:
     weight: 4
