--- a/themes/openy_themes/openy_lily/config/install/block.block.openy_lily_mainnavigation.yml
+++ b/themes/openy_themes/openy_lily/config/install/block.block.openy_lily_mainnavigation.yml
@@ -1,6 +1,5 @@
-uuid: fb62aee5-e5ea-41b5-af90-16fd9b4562db
 langcode: en
-status: false
+status: true
 dependencies:
   config:
     - system.menu.main
@@ -8,12 +7,10 @@ dependencies:
     - system
   theme:
     - openy_lily
-_core:
-  default_config_hash: ON9NFfJbmG3c3BxaCUN1dM1wwjIAesTfr1IJvCyNwOM
 id: openy_lily_mainnavigation
 theme: openy_lily
-region: '-1'
-weight: -1
+region: mobile_menu
+weight: -7
 provider: null
 plugin: 'system_menu_block:main'
 settings:
