--- a/themes/openy_themes/openy_lily/config/install/block.block.openy_lily_views_block__alerts_header_alerts.yml
+++ b/themes/openy_themes/openy_lily/config/install/block.block.openy_lily_views_block__alerts_header_alerts.yml
@@ -1,6 +1,5 @@
-uuid: d377607f-3973-4f15-9886-8082634665d5
 langcode: en
-status: false
+status: true
 dependencies:
   config:
     - views.view.alerts
@@ -8,12 +7,10 @@ dependencies:
     - views
   theme:
     - openy_lily
-_core:
-  default_config_hash: _YkyDFFNQNrAZOpBFTtKnev7UxCAyGKD3j-DXvBev6o
 id: openy_lily_views_block__alerts_header_alerts
 theme: openy_lily
-region: '-1'
-weight: -3
+region: header
+weight: -7
 provider: null
 plugin: 'views_block:alerts-header_alerts'
 settings:
