--- a/themes/openy_themes/openy_lily/config/install/block.block.openy_lily_footermenuright.yml
+++ b/themes/openy_themes/openy_lily/config/install/block.block.openy_lily_footermenuright.yml
@@ -1,4 +1,3 @@
-uuid: b010f253-a874-49db-a649-8881ccac2058
 langcode: en
 status: false
 dependencies:
@@ -8,12 +7,10 @@ dependencies:
     - system
   theme:
     - openy_lily
-_core:
-  default_config_hash: HeEhM_9D7p70Dikll8-GcqsQGJFboveIhN9DyIp02cI
 id: openy_lily_footermenuright
 theme: openy_lily
-region: '-1'
-weight: -6
+region: footer_menu
+weight: -5
 provider: null
 plugin: 'system_menu_block:footer-menu-right'
 settings:
