--- a/themes/openy_themes/openy_lily/config/install/block.block.openy_lily_views_block__alerts_header_alerts_local.yml
+++ b/themes/openy_themes/openy_lily/config/install/block.block.openy_lily_views_block__alerts_header_alerts_local.yml
@@ -1,6 +1,5 @@
-uuid: 3e857965-b142-4a0d-a535-251b6495c953
 langcode: en
-status: false
+status: true
 dependencies:
   config:
     - views.view.alerts
@@ -8,12 +7,10 @@ dependencies:
     - views
   theme:
     - openy_lily
-_core:
-  default_config_hash: h8QQp3PppG8MZSSKvVqqLC74zANPEW7uGdAzFLg_NwY
 id: openy_lily_views_block__alerts_header_alerts_local
 theme: openy_lily
-region: '-1'
-weight: -2
+region: header
+weight: -6
 provider: null
 plugin: 'views_block:alerts-header_alerts_local'
 settings:
