--- a/themes/openy_themes/openy_lily/openy_lily.info.yml
+++ b/themes/openy_themes/openy_lily/openy_lily.info.yml
@@ -1,6 +1,6 @@
 name: 'OpenY Lily'
 type: theme
-description: 'Open Y theme created from YMCA of Twin Cities look and feel. YMCA brand compliant and customizable.'
+description: 'YMCA brand compliant and customizable.'
 package: OPENY_LILY
 core: 8.x
 base theme: openy_rose
