--- a/modules/openy_features/openy_demo_content/modules/openy_demo_menu/modules/openy_demo_menu_main/config/install/migrate_plus.migration.menu_link_main.yml
+++ b/modules/openy_features/openy_demo_content/modules/openy_demo_menu/modules/openy_demo_menu_main/config/install/migrate_plus.migration.menu_link_main.yml
@@ -30,7 +30,7 @@ source:
       id: 2
       title: 'Programs'
       menu_name: 'main'
-      link: 'openy'
+      link: 'internal:/'
       weight: 2
       parent_id: 0
       expanded: 1
