Update module entity_reference_exposed_filters.

--- a/docroot/modules/contrib/entity_reference_exposed_filters/entity_reference_exposed_filters.info.yml
+++ b/docroot/modules/contrib/entity_reference_exposed_filters/entity_reference_exposed_filters.info.yml
@@ -4,8 +4,8 @@ description: 'Entity Reference Nodes displayed as exposed filters with titles in
 # version: VERSION
 # core: 8.x
 
-# Information added by Drupal.org packaging script on 2017-06-02
-version: '8.x-1.x-dev'
+# Information added by Drupal.org packaging script on 2017-09-13
+version: '8.x-1.0-alpha1+1-dev'
 core: '8.x'
 project: 'entity_reference_exposed_filters'
-datestamp: 1496435962
+datestamp: 1505334545
