--- a/docroot/modules/contrib/panelizer/panelizer_quickedit/panelizer_quickedit.info.yml
+++ b/docroot/modules/contrib/panelizer/panelizer_quickedit/panelizer_quickedit.info.yml
@@ -5,11 +5,11 @@ package: Layout
 # version: VERSION
 # core: 8.x
 dependencies:
-  - panelizer
-  - quickedit
+  - panelizer:panelizer
+  - drupal:quickedit
 
-# Information added by Drupal.org packaging script on 2017-04-28
-version: '8.x-4.0'
+# Information added by Drupal.org packaging script on 2017-10-27
+version: '8.x-4.0+7-dev'
 core: '8.x'
 project: 'panelizer'
-datestamp: 1493406088
+datestamp: 1509103089
