--- a/docroot/modules/contrib/panelizer/tests/modules/panelizer_test/panelizer_test.info.yml
+++ b/docroot/modules/contrib/panelizer/tests/modules/panelizer_test/panelizer_test.info.yml
@@ -2,9 +2,11 @@ type: module
 name: Panelizer Test
 description: 'Required for Panelizer simpletests only.'
 # core: 8.x
+dependencies:
+  - panelizer:panelizer
 
-# Information added by Drupal.org packaging script on 2017-04-28
-version: '8.x-4.0'
+# Information added by Drupal.org packaging script on 2017-10-27
+version: '8.x-4.0+7-dev'
 core: '8.x'
 project: 'panelizer'
-datestamp: 1493406088
+datestamp: 1509103089
