--- a/composer.json
+++ b/composer.json
@@ -146,19 +146,19 @@
     ],
     "scripts": {
         "post-install-cmd": [
-            "@composer drupal-scaffold",
+            "DrupalComposer\\DrupalScaffold\\Plugin::scaffold",
             "@cibox-build",
             "@cibox-vm",
             "@docksal",
             "bash scripts/remove_vendor_git_folders.sh || :"
         ],
         "post-update-cmd": [
+            "DrupalComposer\\DrupalScaffold\\Plugin::scaffold",
             "@cibox-build",
             "@cibox-vm",
             "@docksal",
             "bash scripts/remove_vendor_git_folders.sh || :"
         ],
-        "drupal-scaffold": "DrupalComposer\\DrupalScaffold\\Plugin::scaffold",
         "cibox-build": "[ -d ./vendor/ymcatwincities/openy-cibox-build ] && (rsync -r --exclude=composer.json --exclude=.gitignore --exclude=.git ./vendor/ymcatwincities/openy-cibox-build/ ./docroot) || (rm -rf ./docroot/devops ./docroot/*.sh ./docroot/*.yml ./docroot/*.md ./docroot/ansible.cfg)",
         "cibox-vm": "[ -d ./vendor/ymcatwincities/openy-cibox-vm ] && (rsync -r --exclude=composer.json --exclude=README.md --exclude=.gitignore --exclude=.git --exclude=LICENSE ./vendor/ymcatwincities/openy-cibox-vm/ ./) || (rm -rf cibox provisioning Vagrantfile .vagrant backup cache)",
         "docksal": "[ -d ./vendor/ymcatwincities/openy-docksal ] && (rsync -r --exclude=composer.json --exclude=.git --exclude=README.md ./vendor/ymcatwincities/openy-docksal/ ./) || (rm -rf .docksal build.sh)"
