OYPD-627: Fixed messages for Media and Views

--- a/modules/openy_features/openy_media/modules/openy_media_image/openy_media_image.info.yml
+++ b/modules/openy_features/openy_media/modules/openy_media_image/openy_media_image.info.yml
@@ -11,11 +11,13 @@ dependencies:
   - entity_embed
   - field
   - file
+  - focal_point
   - image
   - media_entity
   - media_entity_image
   - openy_media
   - openy_media_image
+  - path
   - taxonomy
   - user
   - views
