--- a/modules/openy_features/openy_media/modules/openy_media_video/config/install/views.view.videos_library.yml
+++ b/modules/openy_features/openy_media/modules/openy_media_video/config/install/views.view.videos_library.yml
@@ -461,11 +461,23 @@ display:
         - 'config:core.entity_view_display.media.document.embedded_half'
         - 'config:core.entity_view_display.media.document.embedded_link'
         - 'config:core.entity_view_display.media.document.teaser'
+        - 'config:core.entity_view_display.media.image.calc_preview'
+        - 'config:core.entity_view_display.media.image.calc_summary'
         - 'config:core.entity_view_display.media.image.default'
         - 'config:core.entity_view_display.media.image.embedded_full'
         - 'config:core.entity_view_display.media.image.embedded_half'
         - 'config:core.entity_view_display.media.image.embedded_link'
+        - 'config:core.entity_view_display.media.image.full_without_blazy'
+        - 'config:core.entity_view_display.media.image.half_without_blazy'
         - 'config:core.entity_view_display.media.image.icon'
+        - 'config:core.entity_view_display.media.image.node_blog'
+        - 'config:core.entity_view_display.media.image.node_blog_teaser'
+        - 'config:core.entity_view_display.media.image.node_program_header'
+        - 'config:core.entity_view_display.media.image.node_program_subcategory_teaser'
+        - 'config:core.entity_view_display.media.image.prgf_banner'
+        - 'config:core.entity_view_display.media.image.prgf_gallery'
+        - 'config:core.entity_view_display.media.image.prgf_small_banner'
+        - 'config:core.entity_view_display.media.image.prgf_teaser'
         - 'config:core.entity_view_display.media.image.teaser'
         - 'config:core.entity_view_display.media.image.thumbnail_for_preview'
         - 'config:core.entity_view_display.media.video.default'
@@ -496,11 +508,23 @@ display:
         - 'config:core.entity_view_display.media.document.embedded_half'
         - 'config:core.entity_view_display.media.document.embedded_link'
         - 'config:core.entity_view_display.media.document.teaser'
+        - 'config:core.entity_view_display.media.image.calc_preview'
+        - 'config:core.entity_view_display.media.image.calc_summary'
         - 'config:core.entity_view_display.media.image.default'
         - 'config:core.entity_view_display.media.image.embedded_full'
         - 'config:core.entity_view_display.media.image.embedded_half'
         - 'config:core.entity_view_display.media.image.embedded_link'
+        - 'config:core.entity_view_display.media.image.full_without_blazy'
+        - 'config:core.entity_view_display.media.image.half_without_blazy'
         - 'config:core.entity_view_display.media.image.icon'
+        - 'config:core.entity_view_display.media.image.node_blog'
+        - 'config:core.entity_view_display.media.image.node_blog_teaser'
+        - 'config:core.entity_view_display.media.image.node_program_header'
+        - 'config:core.entity_view_display.media.image.node_program_subcategory_teaser'
+        - 'config:core.entity_view_display.media.image.prgf_banner'
+        - 'config:core.entity_view_display.media.image.prgf_gallery'
+        - 'config:core.entity_view_display.media.image.prgf_small_banner'
+        - 'config:core.entity_view_display.media.image.prgf_teaser'
         - 'config:core.entity_view_display.media.image.teaser'
         - 'config:core.entity_view_display.media.image.thumbnail_for_preview'
         - 'config:core.entity_view_display.media.video.default'
