OYPD-627: Fixed messages for blocks

--- a/modules/openy_features/openy_block/modules/openy_block_custom_simple/config/install/core.entity_form_display.block_content.simple_block.default.yml
+++ b/modules/openy_features/openy_block/modules/openy_block_custom_simple/config/install/core.entity_form_display.block_content.simple_block.default.yml
@@ -76,6 +76,7 @@ content:
     type: language_select
     weight: 2
     region: content
-    settings: {  }
+    settings:
+      include_locked: true
     third_party_settings: {  }
 hidden: {  }
