--- a/modules/openy_features/openy_block/modules/openy_code_block/config/install/core.entity_form_display.block_content.code_block.default.yml
+++ b/modules/openy_features/openy_block/modules/openy_code_block/config/install/core.entity_form_display.block_content.code_block.default.yml
@@ -18,6 +18,7 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: text_textarea
+    region: content
   info:
     type: string_textfield
     weight: -5
@@ -25,9 +26,12 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+    region: content
   langcode:
     type: language_select
     weight: 2
-    settings: {  }
+    settings:
+      include_locked: true
     third_party_settings: {  }
+    region: content
 hidden: {  }
