--- a/modules/openy_features/openy_taxonomy/modules/openy_txnm_color/config/install/core.entity_form_display.taxonomy_term.color.default.yml
+++ b/modules/openy_features/openy_taxonomy/modules/openy_txnm_color/config/install/core.entity_form_display.taxonomy_term.color.default.yml
@@ -32,7 +32,8 @@ content:
     type: language_select
     weight: 2
     region: content
-    settings: {  }
+    settings:
+      include_locked: true
     third_party_settings: {  }
   name:
     type: string_textfield
