--- a/modules/openy_features/openy_media/modules/openy_media_document/config/install/core.entity_form_display.media.document.default.yml
+++ b/modules/openy_features/openy_media/modules/openy_media_document/config/install/core.entity_form_display.media.document.default.yml
@@ -10,6 +10,7 @@ dependencies:
     - media_entity.bundle.document
   module:
     - file
+    - path
 id: media.document.default
 targetEntityType: media
 bundle: document
@@ -42,7 +43,8 @@ content:
     type: language_select
     weight: 2
     region: content
-    settings: {  }
+    settings:
+      include_locked: true
     third_party_settings: {  }
   name:
     type: string_textfield
@@ -52,6 +54,12 @@ content:
       placeholder: ''
     third_party_settings: {  }
     region: content
+  path:
+    type: path
+    weight: 30
+    region: content
+    settings: {  }
+    third_party_settings: {  }
 hidden:
   created: true
   field_media_mime: true
