--- a/modules/openy_features/openy_media/modules/openy_media_video/config/install/core.entity_form_display.media.video.default.yml
+++ b/modules/openy_features/openy_media/modules/openy_media_video/config/install/core.entity_form_display.media.video.default.yml
@@ -9,6 +9,7 @@ dependencies:
     - field.field.media.video.field_media_video_id
     - media_entity.bundle.video
   module:
+    - path
     - video_embed_field
 id: media.video.default
 targetEntityType: media
@@ -41,7 +42,8 @@ content:
     type: language_select
     weight: 2
     region: content
-    settings: {  }
+    settings:
+      include_locked: true
     third_party_settings: {  }
   name:
     type: string_textfield
@@ -51,6 +53,12 @@ content:
       placeholder: ''
     third_party_settings: {  }
     region: content
+  path:
+    type: path
+    weight: 30
+    region: content
+    settings: {  }
+    third_party_settings: {  }
 hidden:
   created: true
   field_media_source: true
