--- a/modules/openy_features/openy_taxonomy/modules/openy_txnm_blog_category/config/install/core.entity_form_display.taxonomy_term.blog_category.default.yml
+++ b/modules/openy_features/openy_taxonomy/modules/openy_txnm_blog_category/config/install/core.entity_form_display.taxonomy_term.blog_category.default.yml
@@ -20,6 +20,7 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+    region: content
   field_taxonomy_content:
     type: entity_reference_paragraphs
     weight: 31
@@ -30,11 +31,14 @@ content:
       add_mode: dropdown
       form_display_mode: default
     third_party_settings: {  }
+    region: content
   langcode:
     type: language_select
     weight: 2
-    settings: {  }
+    settings:
+      include_locked: true
     third_party_settings: {  }
+    region: content
   name:
     type: string_textfield
     weight: -5
@@ -42,9 +46,11 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+    region: content
   path:
     type: path
     weight: 30
     settings: {  }
     third_party_settings: {  }
+    region: content
 hidden: {  }
